# OpenNebulosity

./: .gitignore  LICENSE  README.md
Mac_Libraries/: ASI_linux_mac_SDK  cfitsio
Mac_Libraries/EDSDK_v131231_Macintosh/: Macintosh.dmg  ReleaseNote.txt  readme.txt
Mac_Libraries/FreeImage_3_18/: FreeImage.2013.sln  FreeImage.2013.vcxproj  FreeImage.2013.vcxproj.filters  FreeImage.2017.sln  FreeImage.2017.vcxproj  FreeImage.2017.vcxproj.filters  FreeImage.rc  Makefile.osx  clean.bat  clean.sh
Mac_Libraries/HID64/: HID_Utilities_External.h
Mac_Libraries/astroccd/: backup.tgz
Mac_Libraries/cfitsio_3290/: Makefile  cfitsio.pc  (+15 more)
Mac_Libraries/qsiapi-7.2.0/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libftd2xx.dylib  libqsiapi-config  libtool
Mac_Libraries/qsiapi-7.2.0/demo_src/: Makefile  Makefile.in  a.out  cs_test.cpp
Mac_Libraries/qsiapi-7.2.0/doc/: Makefile  Makefile.in
Mac_Libraries/qsiapi-7.2.0/lib/: Makefile  Makefile.am  Makefile.in  libqsiapi.la  libqsiapi_la-CCDCamera.lo  libqsiapi_la-CameraID.lo  libqsiapi_la-ConvertUTF.lo  libqsiapi_la-Filter.lo  libqsiapi_la-FilterWheel.lo  libqsiapi_la-HostConnection.lo  libqsiapi_la-HostIO_TCP.lo  libqsiapi_la-HostIO_USB.lo  libqsiapi_la-HotPixelMap.lo  libqsiapi_la-ICameraEeprom.lo  libqsiapi_la-IHostIO.lo  libqsiapi_la-QSIError.lo  libqsiapi_la-QSIFeatures.lo  libqsiapi_la-QSILog.lo  libqsiapi_la-QSIModelInfo.lo  libqsiapi_la-QSI_Interface.lo  libqsiapi_la-QSI_PacketWrapper.lo  libqsiapi_la-QSI_USBWrapper.lo  libqsiapi_la-VidPid.lo  libqsiapi_la-qsiapi.lo
Mac_Libraries/qsiapi-7.2.0/lib/.deps/: libqsiapi_la-CCDCamera.Plo  libqsiapi_la-CameraID.Plo  libqsiapi_la-ConvertUTF.Plo  libqsiapi_la-Filter.Plo  libqsiapi_la-FilterWheel.Plo  libqsiapi_la-HostConnection.Plo  libqsiapi_la-HostIO_TCP.Plo  libqsiapi_la-HostIO_USB.Plo  libqsiapi_la-HotPixelMap.Plo  libqsiapi_la-ICameraEeprom.Plo  libqsiapi_la-IHostIO.Plo  libqsiapi_la-QSIError.Plo  libqsiapi_la-QSIFeatures.Plo  libqsiapi_la-QSILog.Plo  libqsiapi_la-QSIModelInfo.Plo  libqsiapi_la-QSI_Interface.Plo  libqsiapi_la-QSI_PacketWrapper.Plo  libqsiapi_la-QSI_USBWrapper.Plo  libqsiapi_la-VidPid.Plo  libqsiapi_la-qsiapi.Plo
Mac_Libraries/qsiapi-7.2.0/lib/.libs/: libqsiapi.la  libqsiapi.lai
Mac_Libraries/qsiapi-7.2.0/src/: Makefile  Makefile.am  Makefile.in  qsiapitest
Mac_Libraries/qsiapi-7.2.0/src/.deps/: qsiapitest-qsiapitest.Po
Win_Installer/: Neb4_InnoSetup.iss  eula.txt  license.txt  vccrt.msi
nebulosity4/: APyTools.cpp  ASCOMCamera.cpp  ASCOMCamera.h  ASCOMLateCamera.cpp  ASCOM_DDE.cpp  ASCOM_DDE.h  Apogee.cpp  Apogee.h  CIM.cpp  CImg.h  CamToolDialogs.cpp  CamToolDialogs.h  CanonDSLR.cpp  CanonDSLR.h  CanonTest.cpp  DSSView.cpp  DSUSB.cpp  DSUSB.h  FLI.cpp  FLI.h  GREYCstoration  INDI.cpp  INDI.h  LRGB.cpp  LRGB.h  MeadeDSI.cpp  MeadeDSI.h  Moravian.cpp  Moravian.h  Neb4.icns  Nebulosity 4 copy-Info.plist  Nebulosity.cpp  Nebulosity.h  Nebulosity.rc  Nebulosity.vcproj  Nebulosity.vcxproj  Nebulosity.vcxproj.filters  Nebulosity4.sln  OpenNebulosity4.sln  Opticstar130.cpp  (+131 more)
(+1329 files in other folders)
